<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.sample.openweathermap.ui.home.HomeFragment"
        android:label="@string/main_screen_title"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_main_to_choose_cities"
            app:destination="@id/weather" />

        <action
            android:id="@+id/action_main_to_current_city"
            app:destination="@id/forecast" />

    </fragment>

    <fragment
        android:id="@+id/weather"
        android:name="com.sample.openweathermap.ui.weather.WeatherFragment"
        android:label="@string/weather_screen_title"
        tools:layout="@layout/weather_fragment" />

    <fragment
        android:id="@+id/forecast"
        android:name="com.sample.openweathermap.ui.forcast.ForecastFragment"
        android:label="@string/forecast_screen_title"
        tools:layout="@layout/forecast_fragment" />

</navigation>