<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.sample.openweathermap.model.forecast.ForecastResponse.Forecast" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_screen_padding">

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.dtTxt}"
            app:layout_constraintStart_toEndOf="@+id/min_temp_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/min_temp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_min_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_title" />

        <TextView
            android:id="@+id/min_temp_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Double.toString(item.main.tempMin)}"
            app:layout_constraintStart_toEndOf="@+id/min_temp_title"
            app:layout_constraintTop_toBottomOf="@id/date_title"/>

        <TextView
            android:id="@+id/max_temp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_max_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_temp_title" />

        <TextView
            android:id="@+id/max_temp_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Double.toString(item.main.tempMax)}"
            app:layout_constraintStart_toEndOf="@+id/max_temp_title"
            app:layout_constraintTop_toBottomOf="@+id/min_temp_title" />

        <TextView
            android:id="@+id/weather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_temp_title" />

        <TextView
            android:id="@+id/weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.weather.get(0).description}"
            app:layout_constraintStart_toEndOf="@+id/weather_title"
            app:layout_constraintTop_toBottomOf="@+id/max_temp_title" />

        <TextView
            android:id="@+id/speed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_title" />

        <TextView
            android:id="@+id/speed_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Double.toString(item.wind.speed)}"
            app:layout_constraintStart_toEndOf="@+id/speed_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>