<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sample.openweathermap.ui.weather.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_screen_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cities_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.citiesNamesError}"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/_alphabetical_comma"
                android:hint="@string/weather_hint"
                android:inputType="text"
                android:text="@={viewModel.citiesNames}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_16"
            android:onClick="@{()->viewModel.onFetchClicked()}"
            android:text="@string/weather_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cities_input" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_margin_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn"
            app:visibleGone="@{!viewModel.showLoading}"
            tools:listitem="@layout/weather_item" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn"
            app:visibleGone="@{viewModel.showLoading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>